Update config a bit
Whitespace and try to fix container definitions.

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,9 +1,9 @@
 profiles {
   standard {
     params {
-      containers {
-	plot = ''
-	analysis = ''
+      containers { 
+        plot = '' 
+        analysis = ''
       }
     }
   }
@@ -11,8 +11,8 @@ profiles {
   lsf {
     params {
       containers {
-	plot = 'bsweeneyebi/rfam-pfam-plot'
-	analysis = 'bsweeneyebi/rfam-pfam-analysis'
+        plot = 'docker://bsweeneyebi/rfam-pfam-plot'
+        analysis = 'docker://bsweeneyebi/rfam-pfam-analysis'
       }
     }
 
