Initial attempt at using slurm

--- a/nextflow.config
+++ b/nextflow.config
@@ -8,6 +8,33 @@ profiles {
     }
   }
 
+  slurm {
+    params {
+      containers {
+        plot = 'docker://bsweeneyebi/rfam-pfam-plot'
+        analysis = 'docker://bsweeneyebi/rfam-pfam-analysis'
+      }
+    }
+
+    process {
+      executor = 'slurm'
+      maxForks = 2000
+      queue = 'short'
+    }
+
+    singularity {
+      enabled = true
+      cacheDir = "$baseDir/singularity"
+    }
+
+    executor {
+      $slurm {
+        queueSize = 10000
+        submitRateLimit = '1sec'
+      }
+    }
+  }
+
   lsf {
     params {
       containers {
