Parameter fixes for slurm

--- a/nextflow.config
+++ b/nextflow.config
@@ -5,6 +5,7 @@ profiles {
         plot = '' 
         analysis = ''
       }
+      cmalign.maxForks = 100
     }
   }
 
@@ -14,12 +15,15 @@ profiles {
         plot = 'docker://bsweeneyebi/rfam-pfam-plot'
         analysis = 'docker://bsweeneyebi/rfam-pfam-analysis'
       }
+      cmalign.maxForks = 2000
     }
 
     process {
       executor = 'slurm'
       maxForks = 2000
-      queue = 'short'
+      queue = 'standard'
+      time = '12h'
+      memory = 1.GB
     }
 
     singularity {
@@ -30,7 +34,6 @@ profiles {
     executor {
       $slurm {
         queueSize = 10000
-        submitRateLimit = '1sec'
       }
     }
   }
@@ -41,6 +44,7 @@ profiles {
         plot = 'docker://bsweeneyebi/rfam-pfam-plot'
         analysis = 'docker://bsweeneyebi/rfam-pfam-analysis'
       }
+      cmalign.maxForks = 20
     }
 
     process {
